# Job-Tracker-API

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 808cfcabd2a4_init.py
app/: main.py
app/api/routers/: applications.py  auth.py  companies.py  followups.py
app/core/: config.py  deps.py  logging.py  security.py
app/db/: session.py
app/middleware/: request_id.py
app/models/: __init__.py  application.py  company.py  followup.py  user.py
app/schemas/: application.py  auth.py  company.py  dashboard.py  followup.py
github/workflows/: ci.yml
scripts/: entrypoint.sh
tests/: conftest.py
tests/integration/: test_auth_flow.py  test_auth_security.py  test_crud_flow.py
tests/unit/: test_health.py  test_logging.py  test_schemas.py  test_security.py
